<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/edit_text_username_new"
                style="@style/EditTextConditions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_username"/>

            <ProgressBar
                android:id="@+id/progressBar_username"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@id/edit_text_username_new"
                android:layout_alignRight="@id/edit_text_username_new"
                android:layout_alignTop="@id/edit_text_username_new"
                android:padding="10dp"
                android:visibility="invisible"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp">

            <EditText
                android:id="@+id/edit_text_email_new"
                style="@style/EditTextConditions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_email_address"
                android:inputType="textEmailAddress"/>

            <ProgressBar
                android:id="@+id/progressBar_email"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBottom="@id/edit_text_email_new"
                android:layout_alignRight="@id/edit_text_email_new"
                android:layout_alignTop="@id/edit_text_email_new"
                android:padding="10dp"
                android:visibility="invisible"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_text_password_new"
            style="@style/EditTextConditions"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/edit_text_confirm_password"
            style="@style/EditTextConditions"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_sign_in_selector"
            android:text="@string/txt_sign_up"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_sign_in_text_color_selector"/>

        <ProgressBar
            android:id="@+id/progressBar_new"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>
    </LinearLayout>
</FrameLayout>