<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_username"
            style="@style/EditTextConditions"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_username"/>

        <EditText
            android:id="@+id/edit_text_password"
            style="@style/EditTextConditions"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btn_sign_in_selector"
            android:text="@string/txt_sign_in"
            android:textAllCaps="false"
            android:textColor="@drawable/btn_sign_in_text_color_selector"/>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="Forgot Password?"
            android:textColor="@color/urlBlue"/>

    </LinearLayout>
</FrameLayout>