<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#455865"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".activity.LoginActivity">

    <ViewSwitcher
        android:id="@+id/view_switcher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <include layout="@layout/layout_sign_in">
        </include>

        <include layout="@layout/layout_sign_up">
        </include>
    </ViewSwitcher>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#263139">

        <ToggleButton
            android:id="@+id/toggle_sign_up_sign_in"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/btn_sign_up_selector"
            android:textColor="@color/white"
            android:textOff="@string/txt_sign_up"
            android:textOn="@string/txt_sign_in"
            android:textSize="18sp"/>
    </RelativeLayout>

</LinearLayout>